--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Wed Aug 25 18:11:38 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstdbmeter.c: extended dB range to +12.
+
+	* beast-gtk/bstcanvassource.c: changed text color of internal
+	sources to blue.
+
 Sun Aug 22 13:46:53 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstapp.c (bst_app_reload_supers): hide the toplevel notebook
