--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,9 @@
+Sat Aug 28 22:08:40 2004  Tim Janik  <timj@gtk.org>
+
+	* bsebus.c: fixup internal reordering of input objects.
+
+	* bseundostack.c: caller adaption.
+
 Sat Aug 28 14:54:39 2004  Tim Janik  <timj@gtk.org>
 
 	* bseutils.c (bse_item_seq_to_ring): implemented ::inputs property
