--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+Sat Aug 28 22:12:12 2004  Tim Janik  <timj@gtk.org>
+
+	* ja.po: added japanese translation
+	from SATOH, Satoru <ss@gnome.gr.jp>.
+
 2004-08-28  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
