--- a/docs/site-development.texi
+++ b/docs/site-development.texi
@@ -33,6 +33,7 @@ translations can be obtained from the following pages.
 @uref{http://l10n-status.gnome.org/gnome-2.8/es/extras/index.html,, es},
 @uref{http://l10n-status.gnome.org/gnome-2.8/fr/extras/index.html,, fr},
 @uref{http://l10n-status.gnome.org/gnome-2.8/hr/extras/index.html,, hr},
+@uref{http://l10n-status.gnome.org/gnome-2.8/hr/extras/index.html,, ja},
 @uref{http://l10n-status.gnome.org/gnome-2.8/mn/extras/index.html,, mn},
 @uref{http://l10n-status.gnome.org/gnome-2.8/nl/extras/index.html,, nl},
 @uref{http://l10n-status.gnome.org/gnome-2.8/pt/extras/index.html,, pt},
