--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sat Aug 28 21:56:44 2004  Tim Janik  <timj@gtk.org>
+
+	* configure.in: version 6.2.3rc1.
+	added ja.po to ALL_LINGUAS.
+
+	* docs/site-development.texi: added link for japanese translation.
+
 Sat Aug 28 14:30:52 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstbuseditor.c: popup an item sequence dialog if the
