--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-28  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 Sat Aug 28 22:12:12 2004  Tim Janik  <timj@gtk.org>
 
 	* ja.po: added japanese translation
