--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Sat Aug 28 23:12:03 2004  Tim Janik  <timj@gtk.org>
+
+	* bsesong.proc: don't create busses while prepared.
+
 Sat Aug 28 22:08:40 2004  Tim Janik  <timj@gtk.org>
 
 	* bsebus.c: fixup internal reordering of input objects.
