--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Sun Aug 29 04:19:57 2004  Tim Janik  <timj@gtk.org>
+
+	* bsebus.c (bse_bus_get_stack): ensure the summation module gets build.
+
 Sat Aug 28 23:12:03 2004  Tim Janik  <timj@gtk.org>
 
 	* bsesong.proc: don't create busses while prepared.
